--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "axios": "^0.17",
         "cross-env": "^5.1",
-        "laravel-mix": "^1.0"
-    },
-    "dependencies": []
+        "laravel-mix": "^1.0",
+        "less": "^2.7.3",
+        "less-loader": "^4.0.5",
+        "lodash": "^4.17.4"
+    }
 }
