--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "laravel/lumen-framework": "5.5.*",
         "vlucas/phpdotenv": "~2.2",
         "dusterio/lumen-passport": "^0.2.4",
-        "vluzrmos/tinker": "dev-master",
-        "wn/lumen-generators": "^1.3"
+        "vluzrmos/tinker": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
